refactor: changes attribute name